# mobile_prototype_a9x4k7t2m3q8

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
